# fastapi-ml-serving

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  schemas.py
app/middleware/: metrics.py
app/models/: dummy.py  registry.py
app/routes/: health.py  predict.py
docs/: architecture.md
tests/: test_health.py  test_predict.py
