[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fastapi-ml-serving"
version = "1.0.0"
description = "Production-ready ML model serving with FastAPI and Docker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120
target-version = ["py39"]
